--- a/package.json
+++ b/package.json
@@ -5,4 +5,8 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
+},
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
 }
